--- a/rootdir/etc/init.armani.rc
+++ b/rootdir/etc/init.armani.rc
@@ -312,6 +312,7 @@ on property:persist.radio.multisim.config=dsds
 
 service sdcard /system/bin/sdcard -u 1023 -g 1023 -l /data/media /mnt/shell/emulated
     class late_start
+    disabled
 
 service fuse_sdcard1 /system/bin/sdcard -u 1023 -g 1023 -w 1023 /mnt/media_rw/sdcard1 /storage/sdcard1
     class late_start
